UIMA-776
fix Findbugs issues

https://issues.apache.org/jira/browse/UIMA-776

git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@627454 13f79535-47bb-0310-9956-ffa450edef68